grammar.js
    source_file: ($) => repeat($._element),

    _element: ($) =>
      choice(
        $.package_declaration,
        $.namespace_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.filter_statement,
        $.metadata_annotation,
        $.assignment_statement,
        $.textual_representation,
        $.connect_statement,
        $.assert_statement,
        $.expression_statement,
        $.multiplicity_definition,
        $._statement,
      ),

    // =================================================================
    // Declaration wrapper — the key optimization.
    // ONE rule handles the modifier prefix, then dispatches to the
    // specific definition or usage type based on the keyword.
    // =================================================================

    package_declaration: ($) =>
      seq(
        optional($.visibility),
        optional(choice(seq("standard", "library"), "library")),
        "package",
        optional($.short_name),
        field("name", $.identifier),
        choice($.package_body, ";"),
      ),

    package_body: ($) => seq("{", repeat($._element), "}"),

    // --- Namespace (KerML bare namespace without def) ---

    import_statement: ($) =>
      seq(
        optional($.visibility),
        "import",
        optional("all"),
        $.qualified_name,
        optional(token(seq("::", "*"))),
        optional(token(seq("::", "**"))),
        optional($.import_filter),
        choice($._body, ";"),
      ),

    satisfy_statement: ($) =>
      seq(
        optional("assert"),
        optional("not"),
        "satisfy",
        optional("requirement"),
        optional($._feature_ref),
        optional($._type_relationships),
        optional(seq("by", $._feature_ref)),
        optional($.requirement_body),
        optional(";"),
      ),

    // =================================================================
    // Definitions — no prefix (provided by _declaration wrapper)
    // =================================================================

    // =================================================================
    // Definitions — unified rule with keyword dispatch
    // All definitions follow: KEYWORD "def" [short_name] [name] [type_rels] BODY
    // =================================================================

    state_definition: ($) =>
      seq(
        "state", "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.state_body, ";"),
      ),

    definition: ($) =>
      seq(
        $._def_keyword,
        "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.definition_body, ";"),
      ),

    _def_keyword: ($) =>
      choice(
        "part", "action", "port", "attribute", "item",
        "requirement", "constraint", "view", "viewpoint", "rendering",
        "concern", "allocation", "interface", "occurrence", "metadata",
        "calc", "case", "class", "struct", "behavior", "datatype",
        "feature", "function", "predicate", "connector", "interaction",
        "type", "namespace", "classifier", "metaclass", "expr", "step",
        seq("flow", optional("connection")),
        seq(optional("flow"), "connection"),
        seq("use", "case"),
        seq("analysis", optional("case")),
        seq("verification", optional("case")),
        "individual",
        seq("assoc", optional("struct")),
      ),

    definition_body: ($) =>
      seq("{", repeat($._body_element), optional($.result_expression), "}"),

    usage: ($) =>
      seq(
        $._usage_keyword,
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.multiplicity),
        repeat($._feature_qualifier),
        optional($._type_relationships),
        optional($.value_assignment),
        optional($.metadata_annotation_list),
        choice($._body, ";"),
      ),

    _usage_keyword: ($) =>
      choice(
        "part", "attribute", "port", "item", "occurrence",
        "calc", "view", "viewpoint", "rendering", "concern",
        "analysis", "verification", "enum",
        "message", "case",
        "classifier", "metaclass", "expr", "step",
        seq("use", "case"),
        seq("snapshot", optional(choice("item", "part"))),
        seq("timeslice", optional(choice("item", "part"))),
      ),

    state_usage: ($) =>
      seq(
        "state",
        optional(field("name", $.identifier)),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.multiplicity),
        optional($._type_relationships),
        optional("parallel"),
        choice($.state_body, ";"),
      ),

    requirement_usage: ($) =>
      seq(
        "requirement",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.value_assignment),
        choice($.requirement_body, ";"),
      ),

    metadata_usage: ($) =>
      seq(
        "metadata",
        optional(field("name", $.identifier)),
        optional($._feature_ref),
        optional($._type_relationships),
        optional(seq("about", commaSep1($._feature_ref))),
        optional($.multiplicity),
        optional($.metadata_body),
        optional(";"),
      ),

    then_succession: ($) =>
      prec.left(seq(
        "then",
        optional($.visibility),
        optional(choice("action", "state", "fork", "join", "merge", "decide", seq("event", "occurrence"), "event", "terminate", "message", "timeslice", seq("snapshot", optional(choice("part", "item"))), seq("use", "case"), "verification", "analysis")),
        optional($._feature_ref),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.value_assignment),
        choice(
          seq("send", optional($._expression),
              optional(seq("via", $._feature_ref)),
              optional(seq("to", $._feature_ref)),
              choice($._body, ";")),
          seq($.accept_clause, choice($._body, ";")),
          seq("while", $._expression, $._body, optional(seq("until", $._expression, ";"))),
          seq("if", $._expression, $._body, optional(seq("else", choice($._body, $.if_action)))),
          seq("assign", $._feature_ref, ":=", $._expression, ";"),
          seq("include", optional(repeat1(choice("use", "case", "action", "state"))), $._feature_ref,
              optional($._type_relationships), choice($._body, ";")),
          seq("of", optional(field("of_name", $.identifier)), optional($._type_relationships), $._feature_ref,
              optional($.multiplicity), optional($._type_relationships), optional($.value_assignment),
              optional(seq("from", $._feature_ref, "to", $._feature_ref)), choice($._body, ";")),
          $._body,
          ";",
        ),
      )),

    transition_statement: ($) =>
      seq(
        "transition",
        optional(field("name", $.identifier)),
        optional(seq("first", $._feature_ref)),
        optional($.accept_clause),
        optional(seq("if", $._expression)),
        optional(seq("do", choice(
          seq("send", $._expression, choice("to", "via"), $._feature_ref),
          seq("action", $._feature_ref, optional($._type_relationships)),
          $._feature_ref,
        ))),
        seq("then", $._feature_ref),
        ";",
      ),

    message_statement: ($) =>
      seq(
        "message",
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        optional(seq("of", optional(field("of_name", $.identifier)), optional($._type_relationships), $._feature_ref, optional($.multiplicity), optional($._type_relationships))),
        optional($.value_assignment),
        optional(seq("from", $._feature_ref, "to", $._feature_ref)),
        choice($._body, ";"),
      ),

    _body: ($) => $.definition_body,

    state_body: ($) =>
      seq(
        "{",
        repeat(choice(
          $._body_element,
          $.entry_action,
          $.do_action,
          $.exit_action,
        )),
        "}",
      ),

    entry_action: ($) =>
      seq("entry", optional("action"), choice(
        seq(";", optional(seq("then", $._feature_ref, ";"))),
        $.definition_body,
        seq("assign", $._feature_ref, ":=", $._expression, ";"),
        seq("send", $._expression,
            optional(seq("via", $._feature_ref)),
            optional(seq("to", $._feature_ref)),
            ";"),
        // Named entry with type (e.g. `entry action entryAction :>> 'entry';`)
        seq(optional(field("name", $.identifier)), optional($._type_relationships), optional($.multiplicity), optional($._type_relationships), choice(";", $._body)),
        seq($._feature_ref, choice(
          seq(";", optional(seq("then", $._feature_ref, ";"))),
          $.definition_body,
        )),
      )),

    requirement_body: ($) =>
      seq("{", repeat($._body_element), "}"),

    _body_element: ($) =>
      choice(
        $.package_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.assert_statement,
        $.subject_declaration,
        $.actor_declaration,
        $.objective_declaration,
        $.filter_statement,
        $.metadata_annotation,
        $.bind_statement,
        $.verify_statement,
        $.connect_statement,
        $.interface_statement,
        $.allocate_statement,
        $.message_statement,
        $.flow_statement,
        $.dependency_statement,
        $.redefinition_statement,
        $.standalone_redefines,
        $.require_statement,
        $.return_statement,
        $.render_statement,
        $.expose_statement,
        $.stakeholder_declaration,
        $.frame_statement,
        $.expression_statement,
        $.assignment_statement,
        $.terminate_statement,
        $.inline_transition,
        $.textual_representation,
        $.multiplicity_definition,
        // State-related actions can appear in definition bodies too
        $.entry_action,
        $.do_action,
        $.exit_action,
        // Standalone member feature (e.g. `member feature 'public' : VisibilityKind;`)
        $.member_feature,
        // Bind statement (e.g. `bind start = done;`)
        $.bind_statement,
      ),

    assignment_statement: ($) =>
      choice(
        seq(field("name", $.identifier), $.value_assignment, ";"),
        seq(field("name", $.identifier), $._body),
      ),

    // Standalone :>> used inside bodies for named/anonymous redefinition
    require_statement: ($) =>
      seq("require",
          repeat($._prefix_metadata),
          optional(choice("constraint", "requirement")),
          optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.value_assignment),
          choice($._body, ";")),

    stakeholder_declaration: ($) =>
      seq("stakeholder", optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          optional($.value_assignment), choice($._body, ";")),

    subject_declaration: ($) =>
      seq("subject", optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment), choice($._body, ";")),

    actor_declaration: ($) =>
      seq("actor", optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment), choice($._body, ";")),

    objective_declaration: ($) =>
      seq("objective", optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment), choice($._body, ";")),

    // KerML bare keyword usage (e.g. `class A { }`, `feature f;`, `type T;`)
    metadata_annotation: ($) =>
      seq("@", $._feature_ref, optional(seq("about", $._feature_ref)), optional($.metadata_body), optional(";")),

    metadata_body: ($) =>
      seq("{", repeat(choice(
        $.metadata_body_usage,
        $._body_element,
      )), "}"),

    _type_relationships: ($) =>
      repeat1($._type_relationship),

    typed_by: ($) =>
      seq(optional("~"), commaSep1(field("type", $.qualified_name))),

    // Keyword-based type relationships — unified
    _feature_qualifier: ($) =>
      choice("nonunique", "ordered"),

    value_assignment: ($) =>
      choice(
        seq(choice("=", ":=", seq("default", choice("=", ":="))), $._expression),
        seq("default", $._expression),
        seq("default", $._body),
      ),

    _prefix_metadata: ($) =>
      $.hash_tag,

    visibility: ($) => choice("public", "private", "protected"),

    // --- Modifiers ---

    _feature_ref: ($) =>
      choice(
        $.qualified_name,
        $.feature_chain,
      ),

    // --- Expressions ---

    _expression: ($) =>
      choice(
        $.identifier,
        $.qualified_name,
        $.feature_chain,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.binary_expression,
        $.unary_expression,
        $.paren_expression,
        $.bracket_expression,
        $.index_expression,
        $.invocation_expression,
        $.new_expression,
        $.meta_expression,
        $.conditional_expression,
        $.select_expression,
        $.metadata_access_expression,
      ),

    qualified_name: ($) =>
      prec.left(choice(
        seq($.identifier, repeat(seq("::", $.identifier))),
        seq("$", repeat1(seq("::", $.identifier))),
      )),

    feature_chain: ($) =>
      prec.left(
        seq(choice($.qualified_name, $.identifier), repeat1(seq(".", $.identifier))),
      ),

    _word: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    identifier: ($) => choice(
      $._word,
      $.quoted_identifier,
    ),

    number_literal: ($) =>
      token(choice(
        /[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?/,
        /\.[0-9]+([eE][+-]?[0-9]+)?/,
        /0[xX][0-9a-fA-F]+/,
      )),
