test/corpus/usages-extended.txt
=====================================
Snapshot usage with semicolon
=====================================

part def Vehicle {
  snapshot t0;
}

---

(source_file
  (definition
    name: (identifier)
    (definition_body
      (usage
        name: (identifier)))))

=====================================
Timeslice usage with semicolon
=====================================

part def Vehicle {
  timeslice phase1;
}

---

(source_file
  (definition
    name: (identifier)
    (definition_body
      (usage
        name: (identifier)))))

=====================================
Snapshot usage with type
=====================================

part def Vehicle {
  snapshot t0 : VehicleState;
}

---

(source_file
  (definition
    name: (identifier)
    (definition_body
      (usage
        name: (identifier)
        (typed_by
          type: (qualified_name
            (identifier)))))))

=====================================
Timeslice usage with body
=====================================

part def Vehicle {
  timeslice phase1 : Phase {}
}

---

(source_file
  (definition
    name: (identifier)
    (definition_body
      (usage
        name: (identifier)
        (typed_by
          type: (qualified_name
            (identifier)))
        (definition_body)))))

================================================================================
Metadata body field named with a SysML keyword
================================================================================

package P {
    part b {
        @Fmea {
            severity = 9;
            occurrence = 3;
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (package_declaration
    name: (identifier)
    (package_body
      (usage
        name: (identifier)
        (definition_body
          (metadata_annotation
            (qualified_name
              (identifier))
            (metadata_body
              (assignment_statement
                name: (identifier)
                (value_assignment
                  (number_literal)))
              (assignment_statement
                name: (identifier)
                (value_assignment
                  (number_literal))))))))))

================================================================================
Metadata def is one definition after an import
================================================================================

package Lib {
    private import ScalarValues::*;
    metadata def Fmea {
        attribute severity : FmeaRating;
    }
}

--------------------------------------------------------------------------------

(source_file
  (package_declaration
    name: (identifier)
    (package_body
      (import_statement
        (visibility)
        (qualified_name
          (identifier)))
      (definition
        name: (identifier)
        (definition_body
          (usage
            name: (identifier)
            (typed_by
              type: (qualified_name
                (identifier)))))))))

================================================================================
Message statement with payload
================================================================================

occurrence def Interaction {
    message of ignitionCmd : IgnitionCmd from driver.turnVehicleOn to vehicle.trigger1;
}

--------------------------------------------------------------------------------

(source_file
  (definition
    (identifier)
    (definition_body
      (message_statement
        (qualified_name
          (identifier))
        (typed_by
          (qualified_name
            (identifier)))
        (feature_chain
          (identifier)
          (identifier))
        (feature_chain
          (identifier)
          (identifier))))))

================================================================================
Then message with payload value
================================================================================

occurrence def Interaction2 {
    then message fuelMsg of fuelCommand : FuelCommand = other.fuelCommand
        from a.sent to b.received;
}

--------------------------------------------------------------------------------

(source_file
  (definition
    (identifier)
    (definition_body
      (then_succession
        (qualified_name
          (identifier))
        (qualified_name
          (identifier))
        (typed_by
          (qualified_name
            (identifier)))
        (value_assignment
          (feature_chain
            (qualified_name
              (identifier))
            (identifier)))
        (feature_chain
          (identifier)
          (identifier))
        (feature_chain
          (identifier)
          (identifier))))))

================================================================================
Require with feature chain
================================================================================

analysis def A {
    objective o {
        require vehicleSpecification.vehicleFuelEconomyRequirements;
    }
}

--------------------------------------------------------------------------------

(source_file
  (definition
    (identifier)
    (definition_body
      (objective_declaration
        (identifier)
        (definition_body
          (require_statement
            (feature_chain
              (identifier)
              (identifier))))))))
